Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-53168

Drawer has wrong height and position if ApplicationWindow or page has header/footer

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.7.1
    • 5.7.0 Beta
    • Quick: Controls 2
    • None
    • 175d0ea3f80af0ca32baec489d8ea66dd4ee3418

    Description

      If ApplicationWindow or Page with Drawer has header or footer, drawer has wrong size and position:

      import QtQuick.Controls 2.0
      
      ApplicationWindow {
          visible: true
          width: 400
          height: 400
          header: ToolBar { }
      
          Drawer {
              height: parent.height
              width: 200
          }
      }
      

      Though it may be reasonable to use size of window/page content for drawer size, it is positioned not inside a content but inside the whole window. I think it should be positioned this way, but has size of the whole window and if one want to make it to not overlap header/footer it can be done manually (though it shouldn't drop shadow like it does now in this case).

      Attachments

        For Gerrit Dashboard: QTBUG-53168
        # Subject Branch Project Status CR V

        Activity

          People

            Unassigned Unassigned
            krnekit Nikita Krupenko
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes